--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    {% csrf_token %}
     <div id="app"></div>
     <script src="{% static 'build/bundle.js' %}"></script>
 </body>
